--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "azure-storage-blob",
     "azure-core",
     "attrs>=23.1.0",
-    "docu-devs-api-client",
+    "docu-devs-api-client>=1.3.3",
 ]
 
 [project.optional-dependencies]
@@ -23,6 +23,3 @@ dynamic = ["readme"]
 
 [tool.uv]
 index-strategy = "unsafe-first-match"
-
-[tool.uv.sources]
-"docu-devs-api-client" = { path = "../docudevs-sdk", editable = true }
